struggling with the dev_list dictionnary

--- a/Config.cfg
+++ b/Config.cfg
@@ -1,12 +1,12 @@
 [MQTT_BROKER]
-mqttIP = 192.168.1.131
-mqttPORT = 1883
+mqtt_ip = 192.168.1.131
+mqtt_port = 1883
 
 [TOPICS]
-topicOutgoing = openhab/zwave/lighting
-topicOngoing = zwave/lighting
+outgoing_topic = openhab/zwave/lighting
+ongoing_topic = zwave/lighting
 
 
 [ZWAY]
-zwayIP = 192.168.1.131
-zwayPORT = 8083
+zway_ip = 192.168.1.131
+zway_port = 8083
