Subscription works Publishes works
Post to zway from on going payload work

Need to had verification on the publish function to find out if the on going payload match the zwave devices running

--- a/Config.cfg
+++ b/Config.cfg
@@ -1,11 +1,11 @@
 [MQTT_BROKER]
 mqtt_ip = 192.168.1.136
 mqtt_port = 1883
+mqtt_client = openhab
 
-[TOPICS]
+[MQTT_TOPICS]
 outgoing_topic = openhab/read/zwave/lighting
 ongoing_topic = openhab/write/zwave/lighting
-
 
 [ZWAY]
 zway_ip = 192.168.1.131
